# uk-spring-statement-analysis

./: README.md  generate_blog_data.py  pyproject.toml  spring-statement-2026-blog.md
dashboard/: index.html  package-lock.json  package.json
dashboard/public/data/: baseline_economic_assumptions.json  economic_forecast.json  household_comparison.json  household_stats.json
dashboard/src/: App.css  App.jsx  index.css  style.css
dashboard/src/components/: EconomicForecast.jsx  FiscalOutlook.jsx  Footer.jsx  ForecastTable.jsx  Header.jsx  HouseholdImpact.jsx  PersonalCalculator.css  PersonalCalculator.jsx
dashboard/src/hooks/: useData.js
uk_spring_statement_analysis/: __init__.py  __main__.py  charts.py  config.py  generate.py  json_export.py  simulation.py  tables.py
