[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uk-spring-statement-analysis"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "policyengine-uk",
    "matplotlib",
    "pandas",
]

[project.scripts]
generate-blog = "uk_spring_statement_analysis.generate:main"
